--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Gokberk",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "ckeditor5": "^43.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
     "sequelize": "^6.37.3"
   },
